fix(input.jsx): label overflow outside input

--- a/src/components/Input/index.module.css
+++ b/src/components/Input/index.module.css
@@ -3,6 +3,7 @@
 .nx-input{
     position: relative;
     width: 100%;
+    overflow: hidden;
 }
 .nx-input label{
     width: 100%;
@@ -21,6 +22,7 @@
     position: absolute;
     left: 10px;
     top: 30%;
+    text-align: left;
     font-size: 0.85rem;
     color: var(--nx-color-dark);
 }
